// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Checked 1`] = `
<div
  class="checkbox-input mt-3"
>
  <label
    class="text-md select-none font-heading text-main"
  >
    
    Test Checkbox
    
    <input
      class="hidden"
      type="checkbox"
    />
     
    <span />
  </label>
</div>
`;

exports[`Renders Correctly - Unchecked 1`] = `
<div
  class="checkbox-input mt-3"
>
  <label
    class="text-md select-none font-heading text-main"
  >
    
    Another Input
    
    <input
      class="hidden"
      type="checkbox"
    />
     
    <span />
  </label>
</div>
`;
